--- a/styles.css
+++ b/styles.css
@@ -34,6 +34,14 @@ h1 {
   color: #666666;
 }
 
+h1.title {
+  font-size: 0;
+  font-family: "Garamond", Times, serif;
+  text-decoration: underline;
+  font-weight: bold;
+  color: #666666;
+}
+
 h2 {
   font-size: 20px;
   font-family: "Garamond", Times, serif;
